--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -2,6 +2,6 @@ slide-number: true
 footnote : "<a href='#/2'>Presentation Menu</a>"
 transition : fade
 remote-control: true
-theme : moon
+#theme : moon
 logo : assets/logo.png
 vertical-center : false
