--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,7 +1,7 @@
 slide-number: true
-footnote : "<a href='#/2'>Presentation Menu</a>"
-transition : fade
+#footnote : "<a href='#/2'>Presentation Menu</a>"
+#transition : fade
 remote-control: true
 #theme : moon
-logo : assets/logo.png
+#logo : assets/logo.png
 vertical-center : false
